--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://ec2-13-125-41-22.ap-northeast-2.compute.amazonaws.com/"
 }
